--- a/src/stylesheets/parts/buttons.scss
+++ b/src/stylesheets/parts/buttons.scss
@@ -2,6 +2,7 @@
 	background: $color;
 	box-shadow: 0px 3px 0px 0px darken($color, 10%);
 	border-radius: 2px;
+	border-color: $color;
 	-webkit-transition: all .3s linear;
 	-moz-transition: all .3s linear;
 	-ms-transition: all .3s linear;
@@ -15,6 +16,23 @@
 	}
 }
 
-.btn-black {
-	@include button_vndev(#13202C);
+.btn-red {
+	@include button_vndev(#e7543d);
+	width: 10%;
+	margin: 0 auto;
+	text-align: center;
+	margin-top: 16px;
+	min-width: 80px
+}
+
+.btn-primary {
+	margin-left: 36px;
+	background-color: $black;
+}
+.btn-danger {
+	margin-left: 56px;
+}
+.btn {
+
+	text-align: center;
 }
